--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -64,6 +64,7 @@ address = "McCain 350, Mississippi State University, MS, 39759, USA"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
+  {icon = "email", icon_pack = "fab", name = "mirhadiseifi@gmail.com", link = "mailto:mirhadiseifi@gmail.com"}
 #  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
   {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:mirhadiseifi_1?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
