--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -64,12 +64,12 @@ address = "McCain 350, Mississippi State University, MS, 39759, USA"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "email", icon_pack = "fab", name = "mirhadiseifi@gmail.com", link = "mailto:mirhadiseifi@gmail.com"}
+  {icon = "email", icon_pack = "fab", name = "mirhadiseifi@gmail.com", link = "mailto:mirhadiseifi@gmail.com"},
 #  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:mirhadiseifi_1?call"},
+  {icon = "skype", icon_pack = "fab", name = "mirhadiseifi_1", link = "skype:mirhadiseifi_1?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
 #  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
-   {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Hseifi"},
+   {icon = "telegram", icon_pack = "fab", name = "@Hseifi", link = "https://telegram.me/@Hseifi"},
   ]
 
 # Display a map.
