--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -51,8 +51,7 @@ time_format = "3:04 PM"
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "mirhadiseifi@gmail.com"
-phone = "662 617 90 91"
-address = "McCain 350, Mississippi State University, MS, 39759, USA"
+phone = "+1 (662) 617 9091"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
 # office_hours = """Monday 10:00 to 13:00<br>
@@ -64,13 +63,14 @@ address = "McCain 350, Mississippi State University, MS, 39759, USA"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
- # {icon = "e-mail", icon_pack = "fab", name = "mirhadiseifi@gmail.com", link = "mailto:mirhadiseifi@gmail.com"},
+  {icon = "envelope", icon_pack = "fas", name = "mirhadiseifi@gmail.com", link = "mailto:mirhadiseifi@gmail.com"},
 #  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-  {icon = "skype", icon_pack = "fab", name = "mirhadiseifi_1", link = "skype:mirhadiseifi_1?call"},
+  {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:mirhadiseifi_1?call"},
 #  {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
 #  {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
-   {icon = "telegram", icon_pack = "fab", name = "@Hseifi", link = "https://telegram.me/@Hseifi"},
+   {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Hseifi"},
   ]
+  address = "McCain 350, Mississippi State University, MS, 39759, USA"
 
 # Display a map.
 # To show your address on a map in the contact widget, you need to enter your latitude, longitude and choose
