--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -1,4 +1,4 @@
-# Navigation Links
+ce# Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
@@ -14,8 +14,8 @@
 #  weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Experience"
+  url = "#experience"
   weight = 30
 
 [[main]]
