--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -1,4 +1,4 @@
-ce# Navigation Links
+# Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
@@ -15,7 +15,7 @@ ce# Navigation Links
 
 [[main]]
   name = "Experiences"
-  url = "#experiences"
+  url = "#experience"
   weight = 30
 
 [[main]]
