--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -50,7 +50,7 @@ time_format = "3:04 PM"
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-# email = "mirhadiseifi@gmail.com"
+email = "mirhadiseifi@gmail.com"
 phone = "+1 (662) 617 9091"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
